fixed text overflow in chat info

--- a/web/static/styles/messages.css
+++ b/web/static/styles/messages.css
@@ -52,6 +52,9 @@
     flex-basis: 50%;
     font-size: small;
     font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .chats-info-recepient {
     margin-left: 5px;
